<resources>
    <string name="app_name">ft_hangouts</string>

    <!-- Top Action bar -->
    <string name="action_search">action search</string>
    <string name="action_settings">Settings</string>

    <!-- Main activity -->
    <!-- Display contact list -->
    <string name="hello_world">Hello world!</string>
    <string name="hint">A Name</string>

    <string name="title_activity_display_contacts">Display contacts</string>
        <!-- Buttons -->
        <string name="display_contacts_btn">Search Contacts</string>
        <string name="add_contact_btn">Add Contact</string>
        <string name="write_msg_btn">New Message</string>

    <!-- Search page -->
    <string name="title_activity_search_contacts">Search a contact</string>
        <string name="search_page_submit_btn">Search</string>


    <!-- Contact Management activity -->
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="title_activity_edit_contact">Edit Contact</string>
        <string name="edit_contact_page_intro">Edit contact information</string>
        <string name="add_contact_page_intro">Add a new contact</string>
        <string name="add_contact_name_label">Name:*</string>
        <string name="add_contact_nb_label">Phone Number:*</string>
        <string name="add_contact_orga_label">Organisation:</string>
        <string name="add_contact_role_label">Role:</string>
        <string name="add_contact_mail_label">mail:</string>
        <string name="confirm_add_btn">Add Contact</string>
        <string name="confirm_edit_btn">Edit Contact</string>
            <!-- Error logs Display one contact -->
            <string name="add_contact_fields_empty">Fields are empty!</string>
            <string name="add_contact_nb_exist">Number already used!</string>

    <!-- Display one contact -->
    <string name="title_activity_display_contact">Display Contact</string>
        <string name="display_contact_page_title">Contact page</string>
        <string name="display_contact_name_label">Name:</string>
        <string name="display_contact_nb_label">Phone Number:</string>
        <string name="display_contact_orga_label">Organisation:</string>
        <string name="display_contact_role_label">Role:</string>
        <string name="display_contact_mail_label">Mail:</string>
            <!-- Buttons -->
            <string name="display_contact_write_msg_btn">Send Message</string>
            <string name="display_contact_readmsg_btn">Read Messages</string>
            <string name="display_contact_edit_btn">Edit Contact</string>
            <string name="display_contact_delete_btn">Delete Contact</string>
        <string name="Delete_window_title">Delete Contact?</string>
        <string name="Delete_window_msg">Are you sure you want to delete this contact?</string>
        <string name="txt_yes">Yes</string>
        <string name="txt_no">No</string>



    <!-- write new message activity -->
    <string name="title_activity_write_msg">Write Message</string>
        <string name="write_msg_contact_label">Send to:</string>
        <string name="write_msg_bodytext_label">Message:</string>
        <string name="write_msg_search_hint">Enter Contact Name ...</string>
        <string name="write_msg_submit_btn">Send</string>
            <!-- user error messages -->
            <string name="write_msg_error_log_OK">Contact found - OK</string>
            <string name="write_msg_error_log_OKnb">Contact found from number - OK</string>
            <string name="write_msg_error_log_direct_nb">Send direct number</string>
            <string name="write_msg_error_log_ambiguous">Ambiguous contact name</string>
            <string name="write_msg_error_log_no_contact">No contact by this name</string>

   <!-- Read Messages page -->
    <string name="title_activity_readmsg">Read messages</string>
        <string name="readmsg_contact_name_label">Contact Name</string>
        <string name="readmsg_contact_nb_label">Contact Number</string>
    <string name="title_activity_user_setting">User Settings</string>

    <!-- Settings page -->
    <string name="action_bar_settings_text">Settings</string>
    <string name="settings_header_color_select_label">Header color</string>
    <string name="settings_header_color_select_summary">Select displayed header color</string>
    <string name="val_black">black</string>
    <string name="val_red">red</string>
    <string name="val_blue">blue</string>
    <string name="val_green">green</string>
    <string name="val_yellow">yellow</string>
</resources>
