<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.aleung_c.ft_hangouts.add_contact">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_contact_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:text="@string/add_contact_page_intro"/>

        <!-- Error text -->
        <TextView
            android:id="@+id/add_contact_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textColor="#ff0000"
            android:layout_marginBottom="15dp"
            android:text=""/>

        <!-- Name fields -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_contact_name_label"/>
        <EditText
            android:id="@+id/name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1"/>

        <!-- Phone nb fields -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_contact_nb_label"/>
        <EditText
            android:id="@+id/number_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLines="1"/>

        <!-- Organisation fields -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_contact_orga_label"/>
        <EditText
            android:id="@+id/orga_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1"/>

        <!-- Role fields -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_contact_role_label"/>
        <EditText
            android:id="@+id/role_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1"/>

        <!-- Mail fields -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_contact_mail_label"/>
        <EditText
            android:id="@+id/mail_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>
        <!-- Submit btn -->
        <Button
            android:id="@+id/add_contact_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:onClick="Submit"
            android:text="@string/confirm_add_btn" />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
